# actix-oauth-template

./: Cargo.toml
migrations/2023-08-01-134737_create_users/: up.sql
src/: main.rs  schema.rs  utils.rs
src/db/: mod.rs
src/handlers/: error.rs
src/models/: user.rs
src/routes/: auth.rs
