[package]
name = "actix-oauth-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-ratelimit = "0.3.1"
actix-web = "4.3.1"
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "network-address", "r2d2"] }
dotenvy = "0.15.7"
futures = "0.3.28"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
lazy_static = "1.4.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json", "gzip"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
utoipa = { version = "3.4.3", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
